--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ setuptools = "^69.2.0"
 pydantic = {extras = ["email"], version = "^2.6.4"}
 alembic = "^1.13.1"
 psycopg = {extras = ["binary"], version = "^3.1.18"}
+pydantic-extra-types = "^2.6.0"
+phonenumbers = "^8.13.34"
 
 
 [build-system]
